--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "fs": "0.0.1-security",
+    "http": "0.0.0",
     "ini": "^1.3.5"
   },
   "devDependencies": {},
