--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "fs": "0.0.1-security",
     "http": "0.0.0",
-    "ini": "^1.3.5"
+    "ini": "^1.3.5",
+    "mime": "^2.4.0"
   },
   "devDependencies": {},
   "scripts": {
